2011-11-23  Ojan Vafai  <ojan@chromium.org>

        Temporarily save the incremental results json in order to identify bug
        https://bugs.webkit.org/show_bug.cgi?id=73057

        Reviewed by Dean Jackson.

        The test results server needed to be rolled back from tip of tree
        due to a JSON merging bug. It's hard to identify what the bug is without
        the raw data.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager._upload_json_files):

2011-11-23  Ojan Vafai  <ojan@chromium.org>

        Merging two version 4 results hits an error in the test results server
        https://bugs.webkit.org/show_bug.cgi?id=73042

        Reviewed by Adam Barth.

        The old code assumed that if the aggregate results value was not a leaf
        value that the incremental results would exist, which is just totally
        wrong. Added a test for that case as well.

        * TestResultServer/model/jsonresults.py:
        (JsonResults._merge_tests):
        * TestResultServer/model/jsonresults_unittest.py:
        (JsonResultsTest.test_merge_build_directory_hierarchy_old_version):
        (JsonResultsTest.test_merge_build_directory_hierarchy):

2011-11-23  Eric Seidel  <eric@webkit.org>

        Add Environment object to Host and fix the GCC smartquotes trouble seen on the commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=71983

        Reviewed by Adam Barth.

        We'll add more code to Environment overtime,
        allowing us to mock out more of our direct interactions with os.environ.

        This patch also makes run_command print the passed in environment.

        * Scripts/webkitpy/common/host_mock.py:
        * Scripts/webkitpy/common/system/environment.py: Copied from Tools/Scripts/webkitpy/tool/steps/build.py.
        * Scripts/webkitpy/common/system/environment_mock.py: Copied from Tools/Scripts/webkitpy/tool/steps/build.py.